Update from September 17, 2021

--- a/66320-h/66320-h.htm
+++ b/66320-h/66320-h.htm
@@ -135,7 +135,7 @@ country where you are located before using this eBook.
   <p style='display:block; margin-top:1em; margin-bottom:0; margin-left:2em; text-indent:-2em'>Author: Marie Corelli</p>
 <p style='display:block; text-indent:0; margin:1em 0'>Release Date: September 17, 2021 [eBook #66320]</p>
 <p style='display:block; text-indent:0; margin:1em 0'>Language: English</p>
-  <p style='display:block; margin-top:1em; margin-bottom:0; margin-left:2em; text-indent:-2em; text-align:left'>Produced by: Tim Lindell, SF2001, and the Online Distributed Proofreading Team at https://www.pgdp.net (This file was produced from images generously made available by The Internet Archive/Canadian Libraries)</p>
+  <p style='display:block; margin-top:1em; margin-bottom:0; margin-left:2em; text-indent:-2em; text-align:left'>Produced by: Tim Lindell, sf20011, and the Online Distributed Proofreading Team at https://www.pgdp.net (This file was produced from images generously made available by The Internet Archive/Canadian Libraries)</p>
 <div style='margin-top:2em; margin-bottom:4em'>*** START OF THE PROJECT GUTENBERG EBOOK THE YOUNG DIANA ***</div>
 
 <div class="figcenter illowp100" id="i_cover" style="max-width: 20em;">
